# bmp-parser

./: CMakeLists.txt  README.md  main.c
headers/: bmp.h  pixel.h
